Criacao da documentacao do endpoint de envio de dados pelo J3M
